<resources>
    <string name="app_name">coketlist</string>

    <!-- Log In -->
    <string name="log_in_tv_sign_up">회원가입</string>
    <string name="log_in_tv_find_pw">비밀번호 찾기</string>
    <string name="log_in_gradient_btn">로그인</string>

    <!--  Sign UP  -->
    <string name="sign_up_nick_name">닉네임 1~8자</string>
    <string name="sign_up_enter_email">이메일을 입력해 주세요</string>
    <string name="sign_up_enter_pw">비밀번호 4-16자</string>
    <string name="sign_up_re_enter_pw">비밀번호를 한번 더 입력해 주세요</string>
    <string name="sign_up_tv_personal_information">
        계정을 만드는 것은 개인정보취급방침과 \n
        이용약관에 동의하는 것으로 간주합니다.
    </string>
    <string name="sign_up_tv_title">회원가입</string>

    <!-- Find Pw -->
    <string name="find_pw_tv_info">
        가입하신 이메일을 입력해주세요.\n
        비밀번호 재설정 메일이 발송됩니다.
   </string>
    <string name="find_pw_gradient_btn">발송하기</string>

    <!-- Enter Change pw -->
    <string name="enter_change_pw_title">비밀번호 찾기</string>
    <string name="enter_change_pw_gradient_btn">완료</string>
    <string name="enter_change_info">비밀번호를 재설정해주세요</string>

    <!-- Tempo Num -->
    <string name="tempo_num_title">임시 번호</string>
    <string name="tempo_num_enter_pw">임시번호를 입력해주세요</string>
    <string name="tempo_num_email_pw_tv_info">메일에 적힌 임시 번호를 입력해주세요</string>

    <!-- menu bottom navigation -->
    <string name="menu_coket">나의 코킷</string>
    <string name="menu_space">둘러보기</string>

    <!-- Fragment Space -->
    <string name="fragment_space_tv_content">다른 사람들의 Coket</string>

    <!-- Spinner -->
    <string name="spinner_current">최신순</string>
    <string name="spinner_like">좋아요순</string>

    <!-- Item CardView -->
    <string name="item_cv_nick_name">닉네임</string>
    <string name="item_cv_date">2021.01.01</string>
    <string name="item_cv_favorite_info">공감자수</string>
    <string name="item_cv_favorite_number">숫자</string>
    <string name="item_cv_content">다른사람들의 Coket이 보여진다</string>

    <!-- My Coket -->
    <string name="my_coket_tv_title_info">님의 코킷리스트</string>

    <!-- Write List -->
    <string name="write_list_title">리스트 작성</string>
    <string name="write_list_enter_content_info">코로나가 끝나면 하고 싶은 일을 추가해주세요!</string>

    <!-- End Corona -->
    <string name="end_corona_tv_big_title">‘코로나’는 언제 끝날까요?</string>
    <string name="end_corona_tv_small_title">희망하는 날짜를 선택해주세요!</string>

</resources>